--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body {
   background-repeat: no-repeat;
   background-size: 1150px 700px;
   background-color: white;
+  overflow-x: hidden;
 }
 
 .weather-app {
