--- a/src/styles.css
+++ b/src/styles.css
@@ -119,6 +119,10 @@ a:link {
   line-height: 1.25;
 }
 
+#weather-description {
+  text-transform: capitalize;
+}
+
 #units {
   font-weight: 500;
   top: -83px;
